Revert "Add Google Material Icons"
This reverts commit 1bd318ce975fde3bf59ad784c92ab7e6d74b5dcc.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Bre Phelps - Web Developer</title>
 </head>
-
 <body>
   <div class="parent">
     <div class="wrapper">
@@ -16,12 +14,7 @@
           <div class="site-header">Bre Phelps</div>
           <div class="site-subheader">Web Developer</div>
           <ul class="site-navigation">
-            <li>
-              <a href="index.html">
-                <i class="material-icons">home</i>
-                 Home
-              </a>
-            </li>
+            <li><a href="index.html">Home</a></li>
           </ul>
         </div>
       </nav>
@@ -29,9 +22,6 @@
       <main>
         <div class="menu">
          <div class="menu-icon" id="sidebarCollapse">
-          <i class="material-icons">
-            list
-           </i>
            <span class="mobile-header">Bre Phelps: Web Developer</span>
          </div>
         </div>
