--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
   <title>Bre Phelps - Web Developer</title>
 </head>
+
 <body>
   <div class="parent">
     <div class="wrapper">
@@ -14,7 +16,7 @@
           <div class="site-header">Bre Phelps</div>
           <div class="site-subheader">Web Developer</div>
           <ul class="site-navigation">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
           </ul>
         </div>
       </nav>
@@ -22,6 +24,7 @@
       <main>
         <div class="menu">
          <div class="menu-icon" id="sidebarCollapse">
+          <i class="fas fa-bars"></i>
            <span class="mobile-header">Bre Phelps: Web Developer</span>
          </div>
         </div>
