Add portfolio.html page

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <li>
               <a href="contact.html"><i class="fas fa-comment-dots"></i> Contact
               </a>
+            <li>
+              <a href="index.html"><i class="fas fa-home"></i>Home</a></li>
+            <li>
+              <a href="portfolio.html"><i class="fas fa-gem"></i> Portfolio</a>
             </li>
           </ul>
         </div>
